--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-asgiref==3.3.1
-certifi==2020.12.5
-chardet==4.0.0
+asgiref
+certifi
+chardet
 Django
-idna==2.10
-pytz==2021.1
+idna
+pytz
 requests
-sqlparse==0.4.1
-urllib3==1.26.4
+sqlparse
+urllib3
+googlemaps
+folium
+geopandas
+matplotlib
+psycopg2-binary
