--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,21 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-asgiref = "==3.3.1"
-certifi = "==2020.12.5"
-chardet = "==4.0.0"
+asgiref = "*"
+certifi = "*"
+chardet = "*"
 django = "*"
-idna = "==2.10"
-pytz = "==2021.1"
-requests = "==2.25.1"
-sqlparse = "==0.4.1"
-urllib3 = "==1.26.4"
+idna = "*"
+pytz = "*"
+requests = "*"
+sqlparse = "*"
+urllib3 = "*"
+googlemaps = "*"
+folium = "*"
+geopandas = "*"
+matplotlib = "*"
+psycopg2-binary = "*"
+pika = "*"
 
 [dev-packages]
 
